wrap fix

--- a/source/sass/blocks/games-block.scss
+++ b/source/sass/blocks/games-block.scss
@@ -25,6 +25,8 @@
 
     margin-bottom: 33px;
 
+    flex-wrap: wrap;
+
     & h2
     {
         font-family: $font-primary;
